--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="shortcut icon" href="https://aomine1745.github.io/ico/aomine.ico">
 </head>
 <body>
-	<div class="hamburger-box">
+	<button class="hamburger-box">
 		<div class="hamburger"></div>
-	</div>
+	</button>
 
 	<script src="js/app.js"></script>
 </body>
