--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Hamburger Menu</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="shortcut icon" href="https://aomine1745.github.io/ico/aomine.ico">
+	<link rel="shortcut icon" href="https://aomineDev.github.io/ico/aomine.ico">
 </head>
 <body>
 	<button class="hamburger-box">
